style.css
@font-face {
  font-family: icons;
  src: url(./fonts/Glyphter.ttf);
}

@font-face {
  font-family: mainFont;
  src: url(./fonts/Myriad.OTF);
}

.icons {
  font-family: icons;
  color: #93e2ff;
}

.navBarTop {
  background-color: #005480;
  color: #fefdfd;
  position: fixed;
  top: 0;
  width: 100%;
  padding: 13px 50px 13px 100px;
}

.navBarTop a {
  text-decoration: none;
  color: #fefdfd;
  font-family: mainFont;
}

.navBarTop strong {
  margin-left: 48px;
  margin-right: 12px;
}

body {
  margin: 0;
}

h1 {
  display: inline;
  position: absolute;
  padding: 12px;
}

.navBar {
  background-color: #fefdfd;
  height: 30px;
  text-decoration: none;
  box-shadow: 0 12px 2px -2px rgba(191, 191, 191, 0.4);
  padding: 60px;
}

.navBar ul {
  margin-left: 120px;
}

.navBar li {
  text-decoration: none;
  display: inline;
  margin-left: 60px;
}

.dropDown {
  position: absolute;
  top: 0;
  z-index: 1;
  margin-left: 900px;
}

.dropDown button {
  width: 160px;
  height: 48px;
  border: none;
  background-color: #93e2ff;
  color: #005480;
  font-family: mainFont;
  font-size: 18px;
  outline: none;
}

.dropDown button:focus + ul {
  opacity: 1;
  pointer-events: all;
}

.dropDown ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  opacity: 0;
  pointer-events: none;
}

.dropDown li {
  background-color: #fefdfd;
  padding: 6px 0px 6px 33px;
}

.dropDown a {
  font-family: mainFont;
  font-size: 18px;
  padding-left: 12px;
  text-decoration: none;
  color: #005480;
}

.dropDown a:hover {
  text-decoration: underline;
}

